--- a/index.html
+++ b/index.html
@@ -4,13 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>learn Alpine Js</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 <body>
-    <div x-data="{name: 'Annisa', age: 12}">
+    <!-- <div x-data="{name: 'Annisa', age: 12}">
         <p><span x-text="name" class=""></span></p>
         <p><span x-text="age" class=""></span></p>
     </div>
-    <button x-data="{label: 'Klik di sini'}" x-text="label"></button>
+    <button x-data="{label: 'Klik di sini'}" x-text="label"></button> -->
+
+    <!-- global state -->
+    <div x-data>
+        <ul>
+            <template x-for="nm in $store.mahasiswa.nama">
+                <li x-text="nm"></li>
+            </template>
+        </ul>
+    </div>
+
+     <!-- data less alpine -->
+    <button x-data @click="alert('tombol telah di klik!')" class="bg-blue-300 rounded-md py-2 px-4 font-bold">Klik di sini</button>
 </body>
 </html>
+
+<!-- script untuk global state -->
+<script>
+    document.addEventListener('alpine:init', () => {
+        Alpine.store('mahasiswa', {
+            tahun: 2024,
+            nama: ['Annisa', 'George', 'Bonny'],
+        });
+    })
+</script>
